add cities to repo

--- a/city.html
+++ b/city.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Experensive cars</h1>
-    <p>bmw</p>
-    <p>benz</p>
+    <h1>Cities</h1>
+    <p>Tehran</p>
 </body>
 </html>
